--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "proxy": "http://localhost:3050",
   "main": "server/server.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dom": "0.0.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "massive": "^5.2.0",
     "nodemon": "^1.18.4",
     "react": "^16.4.2",
