--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express-session": "^1.15.6",
     "massive": "^5.2.0",
     "nodemon": "^1.18.4",
-    "react": "^16.4.2",
+    "paginate": "^0.2.0",
+    "react": "^16.5.0",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
